--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,17 @@ a {
 	text-decoration: none;
 }
 
+#container {
+	position: relative;
+	min-height: 100vh;
+}
+
+#footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
 .header {
 	display: flex;
 	justify-content: center;
