--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
 	<title>Animal Shelter</title>
 </head>
 <body>
-	<div id="container">
+	<div class="container">
 		<nav>
 			<ul class="nav">
 				<li><a href="/">Home</a></li>
@@ -18,13 +18,13 @@
 			</ul>
 		</nav>
 
-		<div id="content">
+		<div class="content">
 			<main class="parent">
 				<%= yield %>
 			</main>
 		</div>
 
-			<footer id="footer">
+			<footer class="footer">
 				<ul class="nav">
 					<li><a href="/faq">FAQ</a></li>
 					<li><a href="/contact">Contact Us</a></li>
