--- a/public/style.css
+++ b/public/style.css
@@ -33,16 +33,16 @@ a {
 	text-decoration: none;
 }
 
-#container {
+.container {
 	position: relative;
 	min-height: 100vh;
 }
 
-#content {
+.content {
 	padding-bottom: 20px;
 }
 
-#footer {
+.footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
