--- a/public/style.css
+++ b/public/style.css
@@ -39,13 +39,14 @@ a {
 }
 
 .content {
-	padding-bottom: 20px;
+	padding-bottom: 100px;
 }
 
 .footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
+	height: 100px;
 	display: flex;
 	justify-content: center;
 	align-content: center;
